# SensorBoard_FW

./: .clang-format  .clang-tidy  .gdbinit  .gitignore  CMakeLists.txt  GetGitHash.bat  debug_esp32s3.cfg  idf.bat  partitions.csv  sdkconfig  sdkconfig.old
config/: displays_config.json  wifi_config.json
config/default/: config.json  displays_config.json  wifi_config.json
data/webinterface/: index.html
data/webinterface/css/: indexStyle.css  oscilloscopes.css
data/webinterface/js/: fetch-sensors.js  oscilloscopes.js  smoothie.js  websocket.js
data/webinterface/widgets/: display-overview.html
include/: ComCenter.h  Config.h  Config.hpp  ConfigManager.h  Core.hpp  DataCenter.h  Display.h  DisplayCenter.h  DisplayManager.h  DisplayUpdate.h  Event.hpp  EventQueues.h  FileManager.h  FilesystemDriver.h  GitHash.h  Global.h  QueueSystem.h  SensorCenter.h  SensorManager.h  Version.h  WebAPI.h  WebInterface.h  WifiDriver.h  WifiOtaUpdate.h
include/DevelopmentStuff/: DataSimulation.h
include/Driver/: Display.hpp  EcuPids.h  EcuSensors.hpp  Filesystem.hpp  HostWifi.hpp  KLine.hpp  Wifi.hpp  WifiHost.hpp  WifiJoin.hpp
include/Drivers/: FilesystemDriver.h  WifiDriver.h
include/Managers/: CanUpdateManager.h  OperationManager.h
include/Sensor/: ActiveSensor.hpp  FuelLevel.hpp  LeftIndicator.hpp  OilPressure.hpp  PassiveSensor.hpp  RightIndicator.hpp  Rpm.hpp  Speed.hpp  WaterTemperature.hpp
include/Sensors/: FuelLevelSensor.h  IndicatorsSensor.h  InternalTemperatureSensor.h  OilPressureSensor.h  RpmSensor.h  SensorUtils.h  SpeedSensor.h  WaterTemperatureSensor.h
include/State/: Operation.hpp  Registration.hpp  State.hpp  WifiOtaUpdate.hpp
include/UpdateManagers/: DisplayCanUpdater.h
include/WebInterface/: WebInterface.hpp
include/old_Managers/: OperationManager.h  RegistrationManager.h
include/old_WebInterface/: WebAPI.h  WebInterface.h
res/webinterface/: index.html
res/webinterface/widgets/: display-overview.css  display-overview.html  display-overview.js  navbar.css
src/: CMakeLists.txt  ComCenter.c  Config.c  Config.cpp  ConfigManager.c  Core.cpp  DataCenter.c  Display.c  DisplayCenter.c  DisplayManager.c  DisplayUpdate.c  EventQueues.c  FileManager.c  FilesystemDriver.c  Global.c  Global.h  QueueSystem.c  SensorCenter.c  SensorManager.c  WebAPI.c  WebInterface.c  WifiDriver.c  WifiOtaUpdate.c  idf_component.yml  main.c  main.cpp
src/Driver/: Display.cpp  Filesystem.cpp  HostWifi.cpp  KLine.cpp  Wifi.cpp  WifiHost.cpp  WifiJoin.cpp
src/Drivers/: FilesystemDriver.c  WifiDriver.c
src/Managers/: CanUpdateManager.c  OperationManager.c  RegistrationManager.c
src/Sensor/: ActiveSensor.cpp  FuelLevel.cpp  LeftIndicator.cpp  OilPressure.cpp  PassiveSensor.cpp  RightIndicator.cpp  Rpm.cpp  Speed.cpp  WaterTemperature.cpp
src/Sensors/: FuelLevelSensor.c  IndicatorsSensor.c  InternalTemperatureSensor.c  OilPressureSensor.c  RpmSensor.c  SensorUtils.c  SpeedSensor.c  WaterTemperatureSensor.c
src/State/: Operation.cpp  Registration.cpp  State.cpp  WifiOtaUpdate.cpp
src/UpdateManagers/: DisplayCanUpdater.c
src/WebInterface/: WebInterface.cpp
src/old_Managers/: CanUpdateManager.c  OperationManager.c  RegistrationManager.c
src/old_WebInterface/: WebAPI.c  WebInterface.c
webinterface/: index.html  style.css
webinterface/widgets/: display-overview.js  navbar.html  navbar.js
